# litellm-claude-cli

./: .gitignore  .pre-commit-config.yaml  ACTION_LOG.md  AGENTS.md  CLAUDE.md  MEMORY.md  PLAN.md  README.md  docs-layout-convention.md  git-convention.md  memory-convention.md  pi-convention.md  pyproject.toml
.github/workflows/: ci.yml
_archive/: ARCHIVED_ACTION_LOG.md  ARCHIVED_PLAN.md
_memory/: ci-docs-layout-vendored-script.md
hooks/: docs-layout-check.sh
src/litellm_claude_cli/: __init__.py
tests/: test_litellm_dispatch.py  test_live_smoke.py  test_provider.py
